--- a/css/config9.css
+++ b/css/config9.css
@@ -1,3 +1,10 @@
+body{
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 16px;
+    line-height: 1.5;
+    word-wrap: break-word;
+}
+
 pre{
 	padding: 16px;
     overflow: auto;
@@ -5,6 +12,7 @@ pre{
     line-height: 1.45;
     background-color: #f7f7f7;
     border-radius: 3px;
+    font: 12px Consolas, "Liberation Mono", Menlo, Courier, monospace;
 }
 
 pre > code{
@@ -18,3 +26,4 @@ pre > code{
     background-color: transparent;
     border: 0;
 }
+
