--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,8 @@ layout: default
 ---
 <h1>{{ page.title }}</h1>
 <p class="meta">{{ page.date | date_to_string }}</p>
+<p>{{ page.category }}</p>
+<p>{{ page.tags }}</p>
 
 <div class="post">
   {{ content }}
