--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,39 +1,134 @@
+<!-- Config9 Material Frontend Template -->
 <!DOCTYPE html>
-	<html>
-		<head>
-			<title>{{ page.title }}</title>
-			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/config9.css">
-		</head>
-		<body>
-			<nav>
-	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
-	        		<li><a href="/blog">Blog</a></li>
-	    		</ul>
-			</nav>
-			<div class="container">
-			
-			{{ content }}
-			
-			</div><!-- /.container -->
-			<footer>
-	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-				</ul>
-			</footer>
+<html lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+  <title>{{ page.title }}</title>
+  <!-- Metas -->
+  <meta name="description" content="{{ page.description }}">
+  <meta name="keywords" content="{{ page.tags }}">
+  <meta name="og:title" content="{{ page.title }}">
+  <meta name="og:description" content="{{ page.description }}">
+  <meta name="og:site_name" content="Config9.com">
+  <meta name="og:type" content="article">
 
-			<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7&appId=150190708403580";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+  <meta name="twitter:site" content="@config9">
+  <meta name="twitter:title" content="{{ page.title }}">
+  <meta name="twitter:description" content="{{ page.description }}">
+  <meta name="twitter:creator" content="@config9">
+  <meta name="twitter:card" content="photo" />
+  <meta name="twitter:url" content="{{ page.url }}"/>
+  <meta property='og:image' content="https://www.config9.com/assets/abc.png">
+  <meta name="twitter:image" content="https://www.config9.com/assets/abc.png">
 
-		</body>
-	</html>
+  <link rel="canonical" href="{{ page.url }}">
+  <link rel="shortcut icon"  href="img/config9.png" />
+  <link rel="publisher" href="https://plus.google.com/u/0/+LoiTranDuc85/posts" />
+  <link rel="alternate" href="{{ page.url }}" hreflang="en"/>
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="mobile-web-app-capable" content="yes" />
+
+  
+
+
+  <!-- CSS  -->
+  <link href="css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/font-awesome.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/config9.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+</head>
+<body>
+
+<!-- Inserted navbar-fixed div. Remove if no need the navbar fixed -->
+<div class="navbar-fixed">
+  <nav class="blue-grey darken-4" role="navigation" id="config9-nav">
+    <div class="nav-wrapper container">
+      <a id="logo-container" href="#" class="brand-logo">
+        <i class="fa fa-cogs" aria-hidden="true"></i><span>Config9</span>
+      </a>
+      
+      <ul class="right hide-on-med-and-down">
+        <li><a href="/post.html">Tutorials</a></li>
+        <li><a href="#server">Inspirations</a></li>
+        <li><a href="#">Post your article</a></li>
+      </ul>
+
+      <!-- For Mobile -->
+      <ul id="nav-mobile" class="side-nav">
+        <li><a href="#database">Tutorials</a></li>
+        <li><a href="#">Inspirations</a></li>
+        <li><a href="#">Post your article</a></li>
+      </ul>
+      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+    </div>
+  </nav>
+</div><!-- navbar-fixed -->
+
+
+{{ content }}
+
+<!-- FOOTER DIV -->
+  <footer class="page-footer blue-grey darken-4">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">About this blog</h5>
+          <p class="grey-text text-lighten-4">We are Python/NodeJS Fullstack Developers, Database Administrators, System Admins writting blog to share our knowledge to readers. We love to create beautiful, inspiration things with new technologies. If you have any idea, tutorials want to post here, tell us about a duplicated post (no, we are not allowed repost here) or just want to say hi, feel free to contact us at <a href="loitranduc@gmail.com">loitranduc@gmail.com</a></p>
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Links</h5>
+          <ul>
+            <li><a class="white-text" href="#!">Write for us</a></li>
+            <li><a class="white-text" href="#!">Terms & Privacy</a></li>
+          </ul>
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Follow us on</h5>
+          <ul>
+            <li><a class="white-text" href="#!"><i class="fa fa-facebook-official" aria-hidden="true"></i> Facebook</a></li>
+            <li><a class="white-text" href="#!"><i class="fa fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
+            <li><a class="white-text" href="#!"><i class="fa fa-google-plus-square" aria-hidden="true"></i> Google+</a></li>
+            <li><a class="white-text" href="#!"><i class="fa fa-dribbble" aria-hidden="true"></i> Dribble</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+        <div class="left">
+          Made by <a class="orange-text text-lighten-3" href="http://config9.com">Config9</a> with <i class="fa fa-coffee" aria-hidden="true"></i> and <i class="fa fa-google" aria-hidden="true"></i>
+        </div>
+        <div class="right">
+          <i class="fa fa-copyright" aria-hidden="true"></i> All rights reserved. Content redistribution is NOT allowed.
+        </div>
+       
+      </div>
+    </div>
+  </footer>
+
+
+  <!--  Scripts-->
+  <script src="js/jquery-2.1.1.min.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/config9.js"></script>
+
+<!-- Other scripts -->
+
+<!-- GAnalytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-52468038-5', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+
+  </body>
+</html>
+
+			
