--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,76 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
-<p class="meta">{{ page.date | date_to_string }}</p>
-<p>{{ page.category }}</p>
-<p>{{ page.tags }}</p>
+<div class="content config9-post">
 
-<div class="post">
-  {{ content }}
+	<section class="post-header center">
+		<div class="container">
+			<h1>{{ page.title }}</h1>
+			<p>
+				<span class="post-meta author">
+					<i class="fa fa-user" aria-hidden="true"></i>
+					<a href="#">{{ page.author }}</a>
+				</span> 
+				<span class="post-meta post-date">
+					<i class="fa fa-calendar" aria-hidden="true"></i> {{ page.date }}
+				</span>
+ 				<span class="post-meta tags">
+ 					<i class="fa fa-tags" aria-hidden="true"></i>
+ 					{% for tag in page.tags %}
+						<a href="#{{ tag | slugify }}"> {{ tag }} </a>
+					{% endfor %}
+ 				</span>
+			</p>
+			
+			<!-- Ads by GG -->
+			<!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
+			<!-- Links Ads 468x15 -->
+			<ins class="adsbygoogle"
+			     style="display:inline-block;width:468px;height:15px"
+			     data-ad-client="ca-pub-4142190075311515"
+			     data-ad-slot="5763816980"></ins>
+			<script>
+			(adsbygoogle = window.adsbygoogle || []).push({});
+			</script>
+
+		</div>
+	</section>
+
+	<section class="post-content">
+		<div class="container">
+			
+			{{ content }}
+
+		</div>
+
+
+	</section>
+</div><!-- end content -->
+
+
+<div class="container">
+	<section class="post-related">	
+		<div class="row">
+	      <div class="col s12 m6">
+
+	      	<ul class="collection with-header">
+		        <li class="collection-header"><h3>Posts related to: <a href="#">This post title</a></h3></li>
+		        <li class="collection-item"><a href="#"><i class="fa fa-play" aria-hidden="true"></i> The danisha is bringing up</a></li>
+		        <li class="collection-item"><a href="#"><i class="fa fa-play" aria-hidden="true"></i> The danisha is bringing up</a></li>
+		        <li class="collection-item"><a href="#"><i class="fa fa-play" aria-hidden="true"></i> The danisha is bringing up</a></li>
+		        
+		    </ul>
+		  </div>
+		  <div class="col s12 m6">		  
+			<ul class="collection with-header">
+		        <li class="collection-header"><h3>Posts by: <a href="#">AuthorX</a></h3></li>
+		        <li class="collection-item"><a href="#"><i class="fa fa-play" aria-hidden="true"></i> The danisha is bringing up</a></li>
+		        <li class="collection-item"><a href="#"><i class="fa fa-play" aria-hidden="true"></i> The danisha is bringing up</a></li>
+		        <li class="collection-item"><a href="#"><i class="fa fa-play" aria-hidden="true"></i> The danisha is bringing up</a></li>
+		        
+		    </ul>
+	          	
+	      </div>
+	    </div>
+	</section>		
 </div>
