--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,8 +9,8 @@
         <div class="col l3 s12">
           <h5 class="white-text">Links</h5>
           <ul>
-            <li><a class="white-text" href="#!">Write for us</a></li>
-            <li><a class="white-text" href="#!">Terms & Privacy</a></li>
+            <li><a class="white-text" href="/write-for-us">Write for us</a></li>
+            <li><a class="white-text" href="/tos">Terms & Privacy</a></li>
           </ul>
         </div>
         <div class="col l3 s12">
@@ -40,7 +40,7 @@
 
   <!--  Scripts-->
   <script src="/js/jquery-2.1.1.min.js"></script>
-  <script src="/js/materialize.js"></script>
+  <script src="/js/materialize.min.js"></script>
   <script src="/js/config9.js"></script>
 
 <!-- Other scripts -->
