--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
 <div class="navbar-fixed">
   <nav class="blue-grey darken-4" role="navigation" id="config9-nav">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">
+      <a id="logo-container" href="/" class="brand-logo">
         <i class="fa fa-cogs" aria-hidden="true"></i><span>Config9</span>
       </a>
       
@@ -14,9 +14,9 @@
 
       <!-- For Mobile -->
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="#database">Tutorials</a></li>
-        <li><a href="#">Inspirations</a></li>
-        <li><a href="#">Post your article</a></li>
+        <li><a href="/tutorials">Tutorials</a></li>
+        <li><a href="/inspiration">Inspirations</a></li>
+        <li><a href="/write-for-us">Post your article</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
